--- a/index.html
+++ b/index.html
@@ -58,8 +58,7 @@
         <h2>About <span>Me</span></h2>
         <h3>Full Stack Developer!</h3>
         <p>
-          I am a skilled web designer with over 1 years of experience in the
-          industry. My passion lies in creating captivating website designs and
+          I am a skilled web designer with over 1 years of experience. My passion lies in creating captivating website designs and
           implementing them through frontend development. I take pride in
           staying up-to-date with current design trends and leveraging my
           creativity to produce visually appealing and user-friendly websites.
